force-app/main/default/objects/Case/fields/AI_Classification_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_Classification_Explanation__c</fullName>
    <label>AI Classification Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>