force-app/main/default/objects/Case/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <label>AI Summary</label>
    <type>TextArea</type>
</CustomField>