force-app/main/default/objects/Case/fields/Customer_s_Tone_of_Voice__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Tone_of_Voice__c</fullName>
    <label>Customer&apos;s Tone of Voice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>