force-app/main/default/objects/Case/fields/Repeating_Issue__c.field-meta.xml
<CustomField>
    <fullName>Repeating_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeating Issue</label>
    <type>Checkbox</type>
</CustomField>